--- a/src/styles.css
+++ b/src/styles.css
@@ -14,6 +14,15 @@ h1 {
     padding-top: 1rem;
 }
 
+h2 {
+    position: absolute;
+    top: 70vh;
+    font-size: 4rem;
+    font-weight: bold;
+    text-align: center;
+    padding: 1rem;
+}
+
 div.container {
     display: flex;
 }
