Implement ship rotation
User needs to click on the ship after it is placed on the board in order
to rotate it.

--- a/src/styles.css
+++ b/src/styles.css
@@ -71,6 +71,11 @@ div.grid {
     }
 }
 
+.cell.friend.active {
+    cursor: pointer;
+    background: rgb(108, 228, 52);
+}
+
 .cell.attacked {
     cursor: default;
     background: rgb(138, 138, 138);
