--- a/src/styles.css
+++ b/src/styles.css
@@ -129,7 +129,7 @@ button {
     width: 100%;
     height: 100%;
     background-color: whitesmoke;
-    display: flex;
+    display: none;
     flex-direction: column;
     justify-content: center;
     align-items: center;
@@ -141,4 +141,8 @@ p {
     box-sizing: content-box;
     margin-right: 1rem;
     margin-top: 1rem;
+}
+
+span {
+    font-weight: bold;
 }
